# rust-axum-auth

./: .gitignore  Cargo.toml
migrations/: 20231214145144_InitialMigration.up.sql
src/: crypto.rs  main.rs  pool.rs
src/controllers/: auth_controller.rs  users_controller.rs
src/middleware/: authenticated.rs  token_athentication.rs
src/models/: user.rs
src/strategies/: authentication.rs  mod.rs  users.rs
