[package]
name = "rust-rocket-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
bcrypt = "0.15.0"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1.35.0", features = ["full"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
